Improved opened-mobile-nav responsiveness on small height screens, Changed mobile About page's cards' widths to be a bit wider, and Fixed Contact page's eventlistener broadcasting being not defined on other pages.

--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -233,7 +233,7 @@
     #contents {
         list-style-type: none;
         margin: 0;
-        padding: 5% 0%;
+        padding: 0px;
     }
     #contents li {
         font-size: 30px;
@@ -241,6 +241,12 @@
         width: fit-content;
         margin: 0 auto;
         pointer-events: auto;
+    }
+    #contents li:first-child {
+        margin-top: 35px;
+    }
+    #contents li:last-child {
+        margin-bottom: 35px;
     }
     #contents li a {
         text-decoration: none;
