--- a/src/Pages/About/About.css
+++ b/src/Pages/About/About.css
@@ -76,7 +76,7 @@ body {
 .About .Profile .info-container .second p {
     margin: 0% 0% 5% 0%;
 }
-.About .Profile .info-container .second .social-container{
+.About .Profile .info-container .second .social-container {
     display: flex;
     justify-content: space-evenly;
 }
@@ -331,5 +331,11 @@ body {
         letter-spacing: 2px;
         font-size: 20px;
         padding-bottom: 5%;
+    }
+}
+
+@media only screen and (max-width: 480px) {
+    .About .card {
+        width: 90%;
     }
 }
